Styling of custom navbar and header for mobile. Added support for mobile landscape mode and tablets. Updated media queries. Fixed several visual bugs on mobile.

--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -104,7 +104,7 @@ body{
 }
 #homeTextContainer {
     @extend %flex;
-    height: 90vh;
+    height: 85vh;
     font-family: Capriola;
 }
 #homeName {
@@ -410,15 +410,21 @@ git {color: #df4b33; left: -2.8em;}
 #projectsTechnologiesDivContainer {@extend %flex; flex-flow: row;}
 
 #projectsLinkContainer-1 {
+    width: 95%;
+    @extend %flex;
+    align-items: flex-start;
+}
+.projectsLink-1 {
     @extend %flex;
     width: 30%;
-    min-inline-size: 20em;
+    min-inline-size: max-content;
     height: 3em;
     background-color: #3f3f3f;
     padding: 1rem;
+    margin: 1em 0 0;
     @extend %border-proj;
 }
-#projectsLinkText-1 {
+.projectsLinkText {
     color: $white;
     text-shadow: $primary-text-shadow;
     font-size: 1rem;
@@ -426,11 +432,11 @@ git {color: #df4b33; left: -2.8em;}
 .link {text-shadow: none; text-decoration: none; position: relative; color: #735afb; padding: 0 0 0.15em; font-family: Capriola;}
 #hr2 {
     width: 65%;
-    margin: 3em;
+    margin: 3em 0 0;
     background-color: #8063a5;
     height: 0.15em;
 }
-#projectsTitle-2 {margin: 1em 0;}
+#projectsTitle-2 {margin: 1em 0 0.5em;}
 
 // SVG page division
 #svg-container {
@@ -439,7 +445,7 @@ git {color: #df4b33; left: -2.8em;}
     width: inherit;
 }
 
-/************** HAMBURGER MENU ON PHONE **************************/
+/************** HAMBURGER MENU AND HEADER ON PHONE **************************/
 * {
     transition:.25s ease-in-out;
 }
@@ -567,21 +573,42 @@ git {color: #df4b33; left: -2.8em;}
     width: fit-content;
     @extend %flex;
     // When adding links at the end
-    // align-items: baseline;
-    // justify-content: flex-start;
-    // height: 100%;
-    // justify-content: start;
-    // margin-top: 15em;
+    align-items: baseline;
+    justify-content: flex-start;
+    height: 70%;
+    position: absolute;
 }
 #phone-nav a {
-    font-size: 3rem !important;
+    font-size: 2.7rem !important;
     line-height: 2;
     width: 100%;
     @extend %flex;
+    // border: 1px solid #ffc0cb;
+    margin: .7em 0;
+    border-radius: 10px;
+    // background-color: rgba(19, 19, 19, 0.4);
+    background-color: rgba(51, 44, 90, 0.25);
+    border: 1px solid #8063a5;
+    padding: 0 1em;
 }
 .hidden {
     opacity: 0;
 }
+#contact-phone {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: wrap;
+    align-items: flex-end;
+    height: 100%;
+}
+.header-contact-img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 1.5em;
+    filter: drop-shadow(1px 2px 2px black);
+}
+
 
 /*************************** ANIMATIONS ***************************/
 @media (hover: hover) { /* Only works if the deivce supports hover state*/
@@ -632,9 +659,9 @@ git {color: #df4b33; left: -2.8em;}
     #projectsLinkContainer-1 {margin: 1em 0;}
     svg {height: 100px !important;}
 }
-@media only screen and (min-width: 200px) and (max-width: 768px) {
+@media only screen and (min-width: 320px) and (max-width: 768px) {
     html {font-family: $secondary-font; font-style: italic; font-size: 0.6rem; line-height: 1em;}
-    .title {font-size: 2.5rem; margin: 5px;}
+    .title {font-size: 2.5rem; margin: 0 0 0.5em;}
     .menu, .divider {font-size: 1.3rem !important;}
     #homeName {font-size: 8vw; text-shadow: #b73785 2px 2px;}
     #homeTitle {font-size: 4vw; text-shadow: #00a3e1 1px 1px;}
@@ -649,15 +676,44 @@ git {color: #df4b33; left: -2.8em;}
     .tech {margin: 0;}
     react, sass, gsap, git {font-size: 1.5rem; left: -2.8em;}
     react {left: -3.5em;}
-    #projectsLinkContainer-1 { width: 100%; margin: 2em 2em 0;}
+    #projectsLinkContainer-1 {margin: 2em 0 0; align-items: center;}
     #contactPage {scroll-margin-top: 18em;}
     #footer {height: 3rem;}
     svg {height: 50px !important;}
     .header {height: 75px; display: flex; align-items: center; justify-content: flex-start;}
     nav {display: none;}
-    .phone {display: flex ;}
+    .phone {display: flex;}
     #aboutPage {scroll-margin: 0; min-height: fit-content;}
     #projectsPage {scroll-margin: 0;}
+}
+// Mobile landscape
+@media screen and (orientation:landscape) and (min-device-width: 320px) and (max-device-width: 900px) {
+    .header {height: 75px; display: flex; align-items: center; justify-content: flex-start;}
+    nav {display: none;}
+    .phone {display: flex;}
+    #header-menu {width: 50%;}
+    #phone-nav a {font-size: 2rem !important;}
+    #phone-nav {height: 90%;}
+    .header-contact-img {width: 40px; height: 40px;}
+    #about {max-width: 48%;}
+    #skills {width: 17em;}
+    #projectsImgContainer-1 {margin: 1em 1em 0 0; width: 40%; padding: 0;}
+    #projectsDetailContainer-1 {width: 55%;}
+    #projectsDescription-1 {font-size: 1rem;}
+}
+// Tablets
+@media screen and (min-device-width: 768px) and (max-width: 1200px){
+    .header {height: 75px; display: flex; align-items: center; justify-content: flex-start;}
+    nav {display: none;}
+    .phone {display: flex;}
+    html {font-size: 0.9rem;}
+    #header-menu {width: 65%; transform: translateX(40em);}
+    #phone-nav a {font-size: 2.7rem !important;}
+    #about {max-width: 48%; margin: 1em 0; line-height: 1.5;}
+    #skills {width: 15em;}
+    #projectsImgContainer-1 {height: 280px; margin: 1em 1em 0 0;}
+    #projectsLinkContainer-1 {align-items: center;}
+    .header-contact-img {width: 60px; height: 60px;}
 }
 
 
